<resources>
    <string name="app_name">NewsApp</string>
    <string name="image_view">Image View</string>
    <string name="txt_login">Login</string>
    <string name="txt_login_ins">Please Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="txt_forgot">Forgot Password?</string>
    <string name="txt_qa_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="txt_sub_title_forgot">Please fill the input below here</string>
    <string name="txt_title_forgot">Forgot Password</string>
    <string name="create_acc">Create Account</string>
    <string name="title_sub_signup">Please fill the input below here</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_signup">S I G N U P</string>
    <string name="btn_sign_in">S I G N I N</string>
    <string name="sign_in">Sign In</string>
    <string name="qa_signup">Already have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="txt_date">9, Feb 2021</string>
    <string name="txt_error">Not empty</string>
    <string name="txt_error_password">Password Mismatch</string>
    <string name="txt_user">User</string>
    <string name="txt_error_register">Register Failed</string>
    <string name="breaking_news">Breaking News</string>
    <string name="highlight_text">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="nathania_slavina">Nathania Slavina</string>
    <string name="all">All</string>
    <string name="international">International</string>
    <string name="media">media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="title_items">An illionois town fights to save its power plant</string>
    <string name="floating_button">floating_button</string>
    <string name="txt_email_profile">nathania@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_account">Change Account</string>
    <string name="privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="setting">Setting</string>
    <string name="bookmark">Bookmark</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="content_desc">It has emerged that, earlier today, a Sriwijaya Air Boeing 737-500 lost radar contact shortly after departing the Indonesian capital of Jakarta. Sriwijaya Air flight SJ182 was a domestic flight from Jakarta Soekarno–Hatta International Airport (CGK) to Pontianak Supadio International Airport (PNK). It was operated by a 26-year old Boeing 737-500 registered PK-CLC. This aircraft has been with the airline since 2012, having previously flown for US carriers Continental and United.</string>
</resources>