<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_news"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            android:src="@drawable/topic2_pict" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_item"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="4"
        android:text="@string/title_items"
        android:textColor="@color/main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toTopOf="@+id/cv_item_news"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_item"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_item" />
</androidx.constraintlayout.widget.ConstraintLayout>